--- a/notebooks/começar_por_aqui.ipynb
+++ b/notebooks/começar_por_aqui.ipynb
@@ -97,40 +97,127 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Passo 1: Treinar um Modelo de Árvore de Decisão Simples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisão: 1.0\n"
+      "Acurácia do modelo de árvore de decisão: 87.50%\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Carregar o dataset Iris\n",
-    "iris = load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target\n",
+    "# Treinar o modelo de árvore de decisão simples\n",
+    "decision_tree = DecisionTreeClassifier(random_state=42)\n",
+    "decision_tree.fit(X_train, y_train)\n",
     "\n",
-    "# Dividir o dataset em treinamento e teste\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Fazer previsões no conjunto de teste\n",
+    "y_pred_tree = decision_tree.predict(X_test)\n",
     "\n",
-    "# Criar uma Decision Tree\n",
-    "clf = DecisionTreeClassifier(random_state=42)\n",
+    "# Avaliar a acurácia do modelo de árvore de decisão\n",
+    "accuracy_tree = accuracy_score(y_test, y_pred_tree)\n",
+    "print(f'Acurácia do modelo de árvore de decisão: {accuracy_tree * 100:.2f}%')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Passo 2: Treinar Modelos Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia do modelo Random Forest: 96.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# Treinar a Decision Tree\n",
-    "clf.fit(X_train, y_train)\n",
+    "# Treinar o modelo Random Forest\n",
+    "random_forest = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "random_forest.fit(X_train, y_train)\n",
     "\n",
-    "# Prever as classes para o conjunto de teste\n",
-    "y_pred = clf.predict(X_test)\n",
+    "# Fazer previsões no conjunto de teste\n",
+    "y_pred_rf = random_forest.predict(X_test)\n",
     "\n",
-    "# Imprimir a precisão da Decision Tree\n",
-    "print(\"Precisão:\", clf.score(X_test, y_test))"
+    "# Avaliar a acurácia do modelo Random Forest\n",
+    "accuracy_rf = accuracy_score(y_test, y_pred_rf)\n",
+    "print(f'Acurácia do modelo Random Forest: {accuracy_rf * 100:.2f}%')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia do modelo XGBoost: 96.39%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "\n",
+    "# Configuração dos hiperparâmetros do modelo XGBoost\n",
+    "params = {\n",
+    "    'objective': 'multi:softmax',\n",
+    "    'num_class': 10,\n",
+    "    'eta': 0.1,\n",
+    "    'max_depth': 6,\n",
+    "    'subsample': 0.8,\n",
+    "    'colsample_bytree': 0.8,\n",
+    "    'eval_metric': 'merror'\n",
+    "}\n",
+    "\n",
+    "# Criar DMatrix para treinamento e teste\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
+    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
+    "\n",
+    "# Treinamento do modelo XGBoost\n",
+    "num_round = 50\n",
+    "bst = xgb.train(params, dtrain, num_round)\n",
+    "\n",
+    "# Fazer previsões no conjunto de teste\n",
+    "y_pred_xgb = bst.predict(dtest)\n",
+    "\n",
+    "# Avaliar a acurácia do modelo XGBoost\n",
+    "accuracy_xgb = accuracy_score(y_test, y_pred_xgb)\n",
+    "print(f'Acurácia do modelo XGBoost: {accuracy_xgb * 100:.2f}%')\n"
    ]
   },
   {
